Fix jdk11 compile